--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: 📄 Kristian Wahlroos - CV
+title: 📄 Kristian Wahlroos 📄
 description: Kehittäjä @ Reaktor
 logo: /assets/img/wakr.png
 show_downloads: false
